# mfti_project_team_21

./: README.md  pyproject.toml
src/: app.py  config.py  db.py  extractor.py  repo.py  schemas.py  train.py
